# rRPC

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
bindings/fsharp/: Program.fs  README.md  RRpc.fs  run-demo.ps1
bindings/fsharp/RRpc/: NativeBindings.fs  RRpc.fs  RRpc.fsproj
bindings/fsharp/RRpc.Tests/: RRpc.Tests.fsproj  RRpcTests.fs
core/: Cargo.toml
core/src/: error.rs  lib.rs  registry.rs
docs/: ARCHITECTURE.md  ROADMAP.md  api-reference.md  benchmarks.md  error-handling.md  fsharp-bindings.md  getting-started.md  performance.md  schema-guide.md  wasm-guide.md
examples/: README.md  demo.rs
examples/schema/: workspace.msl
examples/schema-generated/: README.md
examples/schema-generated/fsharp/: Generated.Tests.fs  Generated.fs  Generated.fsproj
examples/schema-generated/go/: go.mod  node.go  node_test.go
examples/schema-generated/rust/: Cargo.toml
examples/schema-generated/rust/src/: lib.rs
examples/schema-generated/ts/: node.ts  test_roundtrip.js
tools/msl-compiler/: Cargo.toml  README.md
tools/msl-compiler/src/: lib.rs  main.rs
tools/msl-compiler/tests/: compare_to_examples.rs  debug_yaml.rs  integration_test.rs
